Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-111902

[Reg 5.15 -> 6.4.2] Loader with StackLayout and Repeater displays an incorrect index

    XMLWordPrintable

Details

    • e397e5b43 (dev), 5b7e125dd (6.4), 8b6a4a923 (6.5)

    Description

      When using `asynchronous: true` with a Loader that contains a StackLayout with a Repeater, the StackLayout assigns wrong indexes. This results in the wrong item being visible in the stack.

      To reproduce the issue, please run the attached example project. 

      1. Click on Load button. 0-0-0-1 is visible, this should be 0-0-0-0. The Repeater index should match the StackLayout index.
      2. Use the ComboBox to select 3. Two items are now visible at the same time! The Repeater index 3 item's attached property StackLayout.index is still 0.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            santhoshkumar Santhosh Kumar Selvaraj
            tuomas.vaarala Tuomas Vaarala
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes